deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /D01/index.html
spec:
  ingressClassName: nginx
  rules:
    - host: actix.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actix
                port:
                  number: 8080
